...
                spacing: 24,
            ) {
                ClockPanelView()
                LocationPanelView(viewModel: viewModel.locationVM).accessibilityIdentifier("LocationPanel")
                EventsPanelView(viewModel: viewModel.eventsVM).accessibilityIdentifier("EventsPanel")
                WeatherPanelView(viewModel: weatherVM).accessibilityIdentifier("WeatherPanel")
                PhotoGalleryView(viewModel: photoVM).accessibilityIdentifier("PhotosPanel")
                TasksPanelView(viewModel: tasksVM).accessibilityIdentifier("TasksPanel")
                JamPanelView(viewModel: jamVM).gridCellColumns(2).accessibilityIdentifier("JamPanel")
            }
            .padding(16)
        }
    }

...
